<?xml version="1.0"?>
<package format="3">
  <name>arm4_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Robot ARM4 project.</description>
  <maintainer email="user@example.com">arm4_user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
